[package]
name = "sketch"
version = "0.1.0"
authors = ["Christian Duerr <contact@christianduerr.com>"]
edition = "2021"

[dependencies]
bitflags = "2.6.0"
clap = { version = "4.5.18", features = ["derive"] }
home = "0.5.9"
libc = "0.2.77"
mio = { version = "1.0.0", features = ["os-ext"] }
unicode-width = "0.2.0"
vte = "0.13.0"
