[package]
name = "sketch"
version = "1.0.0"
description = "Terminal painting program"
authors = ["Christian Duerr <contact@christianduerr.com>"]
repository = "https://github.com/chrisduerr/sketch"
rust-version = "1.81.0"
license = "GPL-3.0"
edition = "2021"

[dependencies]
bitflags = "2.6.0"
clap = { version = "4.5.18", features = ["derive"] }
home = "0.5.9"
libc = "0.2.77"
mio = { version = "1.0.0", features = ["os-ext"] }
unicode-width = "0.2.0"
vte = "0.13.0"
